// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DG CORDIS CSV transformer Can handle multi-value inputs for participants and coordinators 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "4924771",
      "value": 4924771,
    },
    "funding_area": Array [
      "/RIA",
    ],
    "mmf_heading": "H2020-SFS-2017-2",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "EUR",
      "raw": "4924771",
      "value": 4924771,
    },
  },
  "call_year": "",
  "complete": true,
  "description": "rcn: 215949
acronym: UNISECO
topics: SFS-29-2017
objective: The overarching objective of UNISECO is to strengthen the sustainability of EU farming systems, through co-constructing practice-validated strategies and incentives for the promotion of improved agro-ecological approaches. We will enhance the understanding of socio-economic and policy drivers and barriers for further development and implementation of agro-ecological approaches in EU farming systems to identify and facilitate more effective management strategies for European agriculture. This requires a wider systems perspective, considering socio-economic, ecological and political settings at a territorial level. We will operationalise a socio-ecological systems framework that integrates external settings into a sustainability assessment of farming systems, paying particular attention to the role of different types of actors and their roles in sub-systems. UNISECO will provide a methodological toolkit to assess the environmental, economic and social impacts of innovative strategies and incentives for agro-ecological approaches in EU farming systems at farm and territorial levels. The methodological toolkit will be tested in participatory case studies in 15 European countries with different biophysical, socio-economic and socio-cultural contexts of farming systems. UNISECO is committed to a genuine transdisciplinary process, reflected in consortium composition of stakeholder and scientific partners, and the emphasis on multi-actor engagement. Group learning processes, integrating practical and theoretical knowledge, will benefit scientists, stakeholders and end-users through improved understanding on how to strengthen sustainability of EU farming systems. UNISECO addresses the work programme topic SFS-29-2017 and contributes to Sustainable Food Security by identifying and supporting farming systems that enable the production of healthy food while preserving the environment and bringing added value to farm households and the different stakeholders of the value chain.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "H2020",
  "project_id": "773901",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "GB",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "ES",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "RO",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "FI",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "SE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "CH",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "CZ",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "BE",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "GR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "HU",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "AT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LV",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "LT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "IT",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "centroid": null,
      "country_code": "FR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "RTD",
  "results": Object {
    "available": "",
    "result": "",
  },
  "status": "SIGNED",
  "sub_programme_name": "H2020-EU.3.2.1.1.",
  "success_story": "",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "",
      "country": "DE",
      "email": "",
      "name": "JOHANN HEINRICH VON THUENEN-INSTITUT, BUNDESFORSCHUNGSINSTITUT FUER LAENDLICHE RAEUME, WALD UND FISCHEREI",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "GB",
      "email": "",
      "name": "THE UNIVERSITY COURT OF THE UNIVERSITY OF ABERDEEN",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "ES",
      "email": "",
      "name": "GESTION AMBIENTAL DE NAVARRA S.A",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "RO",
      "email": "",
      "name": "THE JAMES HUTTON INSTITUTE",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "FI",
      "email": "",
      "name": "ASOCIATIA WWF PROGRAMUL DUNARE CARPATI ROMANIA",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "SE",
      "email": "",
      "name": "LUONNONVARAKESKUS",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "CH",
      "email": "",
      "name": "SVERIGES LANTBRUKSUNIVERSITET",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "CZ",
      "email": "",
      "name": "FORSCHUNGSINSTITUT FUR BIOLOGISCHEN LANDBAU STIFTUNG",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "BE",
      "email": "",
      "name": "BIOINSTITUT OPS",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "GR",
      "email": "",
      "name": "EUROPEAN LANDOWNERS ORGANIZATION",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "HU",
      "email": "",
      "name": "AGRICULTURAL UNIVERSITY OF ATHENS",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "AT",
      "email": "",
      "name": "GEONARDO ENVIRONMENTAL TECHNOLOGIES LTD",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "LV",
      "email": "",
      "name": "UNIVERSITAET FUER BODENKULTUR WIEN",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "LT",
      "email": "",
      "name": "BALTIJAS VIDES FORUMS",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "IT",
      "email": "",
      "name": "BALTIJOS APLINKOS FORUMAS VSI",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "FR",
      "email": "",
      "name": "USTAV ZEMEDELSKE EKONOMIKY A INFORMACI",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "email": "",
      "name": "CONSIGLIO PER LA RICERCA IN AGRICOLTURA E L'ANALISI DELL'ECONOMIA AGRARIA",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "email": "",
      "name": "INSTITUT SUPERIEUR D'AGRICULTURE RHONE ALPES I.S.A.R.A",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": "2018-05-01T00:00:00.000Z",
    "from_precision": "day",
    "to": "2021-04-30T00:00:00.000Z",
    "to_precision": "day",
  },
  "title": "Understanding and improving the sustainability of agro-ecological farming systems in the EU",
  "type": Array [],
}
`;

exports[`DG CORDIS CSV transformer Produces correct JSON output structure 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "funding_area": Array [
      "25",
    ],
    "mmf_heading": "6998911",
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "EUR",
      "raw": "7643751",
      "value": 7643751,
    },
  },
  "call_year": "",
  "complete": true,
  "description": "rcn: 215954
acronym: SMARTER
topics: SFS-15-2016-2017
objective: SMARTER will develop and deploy innovative strategies to improve Resilience and Efficiency (R&E) related traits in sheep and goats. SMARTER will find these strategies by: i) generating and validating novel R&E related traits at a phenotypic and genetic level ii) improving and developing new genome-based solutions and tools relevant for the data structure and size of small ruminant populations, iii) establishing new breeding and selection strategies for various breeds and environments that consider R&E traits . SMARTER with help from stakeholders chose several key R&E traits including feed efficiency, health (resistance to disease, survival) and welfare. Experimental populations will be used to identify and dissect new predictors of these R&E traits and the trade-off between animal ability to overcome external challenges. SMARTER will estimate the underlying genetic and genomic variability governing these R&E related traits. This variability will be related to performance in different environments including genotype-by-environment interactions (conventional, agro-ecological and organic systems) in commercial populations. The outcome will be accurate genomic predictions for R&E traits in different environments across different breeds and populations. SMARTER will also create a new cooperative European and international initiative that will use genomic selection across countries. This initiative will make selection for R&E traits faster and more efficient. SMARTER will also characterize the phenotype and genome of traditional and underutilized breeds. Finally, SMARTER will propose new breeding strategies that utilise R&E traits and trade-offs and balance economic, social and environmental challenges. The overall impact of the multi-actor SMARTER project will be ready-to-use effective and efficient tools to make small ruminant production resilient through improved profitability and efficiency.",
  "ec_priorities": Array [],
  "media": Array [],
  "programme_name": "H2020",
  "project_id": "772787",
  "project_locations": Array [
    Object {
      "address": "",
      "centroid": null,
      "country_code": "FR",
      "location": null,
      "nuts": Array [],
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [],
  "reporting_organisation": "RTD",
  "results": Object {
    "available": "",
    "result": "",
  },
  "status": "SIGNED",
  "sub_programme_name": "H2020-EU.3.2.1.1.",
  "success_story": "",
  "themes": Array [],
  "third_parties": Array [
    Object {
      "address": "",
      "country": "/RIA",
      "email": "",
      "name": "H2020-SFS-2017-2",
      "phone": "",
      "region": "",
      "role": "coordinator",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "FR",
      "email": "",
      "name": "INSTITUT NATIONAL DE LA RECHERCHE AGRONOMIQUE",
      "phone": "",
      "region": "",
      "role": "participant",
      "type": "",
      "website": "",
    },
  ],
  "timeframe": Object {
    "from": "2018-11-01T00:00:00.000Z",
    "from_precision": "day",
    "to": "2022-10-31T00:00:00.000Z",
    "to_precision": "day",
  },
  "title": "SMAll RuminanTs breeding for Efficiency and Resilience",
  "type": Array [],
}
`;
